--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   --color-1: 188, 3, 255;
+  overflow-x: hidden;
 }
 
 code {
